[package]
name = "guidgen"
description = "Small commandline utility to create a UUID."
version = "1.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"
homepage = "https://github.com/hardliner66/guidgen"
repository = "https://github.com/hardliner66/guidgen"
readme = "README.md"
license-file = "LICENSE"

[[bin]]
name = "guid"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version="0.8.1", features=["v4"]}
